fix overflow and layout issue for habits list and pages

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -33,7 +33,8 @@ html {
 }
 
 body {
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 ul {
